@@ -87,6 +87,17 @@
 //#define CC_SPRITESHEET_DEBUG_DRAW 1
 
 /**
+ If enabled, CCNode will transform the nodes using a cached Affine matrix.
+ If disabled, the node will be transformed using glTranslate,glRotate,glScale.
+ Using the affine matrix only requires 2 GL calls.
+ Using the translate/rotate/scale requires 5 GL calls.
+ But computing the Affine matrix is relative expensive.
+ But according to performance tests, Affine matrix performs better.
+ This parameter doesn't affect SpriteSheet nodes.
+ */
+#define CC_NODE_TRANSFORM_USING_AFFINE_MATRIX 1
+
+/**
  Enable it if you want to support v0.8 compatbility.
  Basically, classes without namespaces will work.
  It is recommended to disable compatibility once you have migrated your game to v0.9 to avoid class name polution
